// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grids  should render all grids correctly 1`] = `
<styled.div>
  <styled.div>
    <p>
      Mode
    </p>
    <SelectField
      name="mode"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="Imaging"
        value="Imaging"
      >
        Imaging
      </option>
      <option
        key="Streaming"
        value="Streaming"
      >
        Streaming
      </option>
    </SelectField>
  </styled.div>
  <styled.div>
    <p>
      Filter
    </p>
    <SelectField
      name="filter"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="B"
        value="B"
      >
        B
      </option>
      <option
        key="H-alpha"
        value="H-alpha"
      >
        H-alpha
      </option>
      <option
        key="Open"
        value="Open"
      >
        Open
      </option>
      <option
        key="R"
        value="R"
      >
        R
      </option>
      <option
        key="U"
        value="U"
      >
        U
      </option>
      <option
        key="V"
        value="V"
      >
        V
      </option>
    </SelectField>
  </styled.div>
</styled.div>
`;

exports[`Grids  should render all grids correctly 2`] = `
<styled.div>
  <styled.div>
    <p>
      Exposure time
    </p>
    <InputField
      name="exposureTime"
      onChange={[Function]}
    />
  </styled.div>
  <styled.div>
    <p>
      Filter
    </p>
    <SelectField
      name="filter"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="B"
        value="B"
      >
        B
      </option>
      <option
        key="H-alpha"
        value="H-alpha"
      >
        H-alpha
      </option>
      <option
        key="Open"
        value="Open"
      >
        Open
      </option>
      <option
        key="R"
        value="R"
      >
        R
      </option>
      <option
        key="U"
        value="U"
      >
        U
      </option>
      <option
        key="V"
        value="V"
      >
        V
      </option>
    </SelectField>
  </styled.div>
</styled.div>
`;

exports[`Grids  should render all grids correctly 3`] = `
<styled.div>
  <styled.div>
    <p>
      Mode
    </p>
    <SelectField
      name="mode"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="High Resolution"
        value="HIGH RESOLUTION"
      >
        High Resolution
      </option>
      <option
        key="High Stability"
        value="HIGH STABILITY"
      >
        High Stability
      </option>
      <option
        key="Int Cal Fibre"
        value="INT CAL FIBRE"
      >
        Int Cal Fibre
      </option>
      <option
        key="Low Resolution"
        value="LOW RESOLUTION"
      >
        Low Resolution
      </option>
      <option
        key="Medium Resolution"
        value="MEDIUM RESOLUTION"
      >
        Medium Resolution
      </option>
    </SelectField>
  </styled.div>
</styled.div>
`;

exports[`Grids  should render all grids correctly 4`] = `
<styled.div>
  <styled.div>
    <p>
      Mode
    </p>
    <SelectField
      name="mode"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="Fabry Perot"
        value="Fabry Perot"
      >
        Fabry Perot
      </option>
      <option
        key="FP polarimetry"
        value="FP polarimetry"
      >
        FP polarimetry
      </option>
      <option
        key="Imaging"
        value="Imaging"
      >
        Imaging
      </option>
      <option
        key="Polarimetric imaging"
        value="Polarimetric imaging"
      >
        Polarimetric imaging
      </option>
      <option
        key="MOS"
        value="MOS"
      >
        MOS
      </option>
      <option
        key="MOS polarimetry"
        value="MOS polarimetry"
      >
        MOS polarimetry
      </option>
      <option
        key="Spectropolarimetry"
        value="Spectropolarimetry"
      >
        Spectropolarimetry
      </option>
      <option
        key="Spectroscopy"
        value="Spectroscopy"
      >
        Spectroscopy
      </option>
    </SelectField>
  </styled.div>
  <styled.div>
    <p>
      Detector Mode
    </p>
    <SelectField
      name="detectorMode"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="Normal"
        value="Normal"
      >
        Normal
      </option>
      <option
        key="Frame Transfer"
        value="Frame Transfer"
      >
        Frame Transfer
      </option>
      <option
        key="Slot Mode"
        value="Slot Mode"
      >
        Slot Mode
      </option>
      <option
        key="Shuffle"
        value="Shuffle"
      >
        Shuffle
      </option>
      <option
        key="Drift Scan"
        value="Drift Scan"
      >
        Drift Scan
      </option>
    </SelectField>
  </styled.div>
</styled.div>
`;

exports[`Grids  should render all grids correctly 5`] = `
<styled.div>
  <styled.div>
    <p>
      Detector Mode
    </p>
    <SelectField
      name="detectorMode"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="Normal"
        value="Normal"
      >
        Normal
      </option>
      <option
        key="Slot Mode"
        value="Slot Mode"
      >
        Slot Mode
      </option>
      <option
        key="Drift Scan"
        value="Drift Scan"
      >
        Drift Scan
      </option>
      <option
        key="Frame Transfer"
        value="Frame Transfer"
      >
        Frame Transfer
      </option>
    </SelectField>
  </styled.div>
</styled.div>
`;

exports[`Grids  should render all grids correctly 6`] = `
<styled.div>
  <styled.div>
    <p>
      Exposure time
    </p>
    <InputField
      name="exposureTime"
      onChange={[Function]}
    />
  </styled.div>
  <styled.div>
    <p>
      Filter
    </p>
    <SelectField
      name="filter"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="B"
        value="B"
      >
        B
      </option>
      <option
        key="H-alpha"
        value="H-alpha"
      >
        H-alpha
      </option>
      <option
        key="Open"
        value="Open"
      >
        Open
      </option>
      <option
        key="R"
        value="R"
      >
        R
      </option>
      <option
        key="U"
        value="U"
      >
        U
      </option>
      <option
        key="V"
        value="V"
      >
        V
      </option>
    </SelectField>
  </styled.div>
</styled.div>
`;

exports[`Grids  should render all grids correctly 7`] = `
<styled.div>
  <styled.div>
    <p>
      Exposure time
    </p>
    <InputField
      name="exposureTime"
      onChange={[Function]}
    />
  </styled.div>
  <styled.div>
    <p>
      Filter
    </p>
    <SelectField
      name="filter"
      onChange={[Function]}
    >
      <AnyOption />
      <option
        key="B"
        value="B"
      >
        B
      </option>
      <option
        key="H-alpha"
        value="H-alpha"
      >
        H-alpha
      </option>
      <option
        key="Open"
        value="Open"
      >
        Open
      </option>
      <option
        key="R"
        value="R"
      >
        R
      </option>
      <option
        key="U"
        value="U"
      >
        U
      </option>
      <option
        key="V"
        value="V"
      >
        V
      </option>
    </SelectField>
  </styled.div>
</styled.div>
`;
